updated repos update to include all attributes